<resources>
    <string name="app_name">Tripway Daily Trips</string>
    <string name="main_activity_title">Daily Trips </string>
    <string name="about_activity_title">About Us </string>
    <string name="title_home">Home</string>
    <string name="title_map">Map</string>
    <string name="title_about_us">About Us</string>
    <string name="title_menu_search">Search</string>
    <string name="pref_previously_started">SplashActivity</string>
    <string name="pref_previously_started_tap">TapViewer</string>
    <string name="about_brief">We create Memories!</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_intro">MainIntroActivity</string>
    <string name="title_intro">Welcome!</string>
    <string name="description_intro">We are really happy to have you with us!\n Lets find more about our app!</string>
    <string name="second_slide_title_intro">Daily Trips form Thessaloniki!</string>
    <string name="second_slide_description_intro">Select your trip over many choices </string>
    <string name="third_slide_title_intro">Book your trip now!</string>
    <string name="third_slide_description_intro"> Book it in a few clicks </string>
    <string name="fourth_slide_title_intro">That\'s it </string>
    <string name="fourth_slide_description_intro"> Let\'s have fun! </string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main2">Main2Activity</string>


    <string name="action_settings">Settings</string>
    <string name="map_target_view_title">See more about our daily trips on the map</string>
    <string name="map_target_view_description">Let\'s find them!</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_descriptions">DescriptionsActivity</string>
    <string name="description_tab_text">Descriptions</string>
    <string name="map_tab_text">Map</string>
    <string name="buy_now_tab">Buy Now!</string>
    <string name="action_calendar">Calendar</string>
    <string name="action_share">Share</string>
    <string name="no_internet_acces">There is no Internet Access!\n Please try again!</string>
    <string name="fail_response">An error has occurred ! </string>
    <string name="fail_response_description">Please check your internet connection and try again!</string>
    <string name="loading">Loading</string>
    <string name="loading_message">Loading Trips!</string>
    <string name="person">Person</string>
    <string name="read_more">Read More</string>
    <string name="share_text">Check out this amazing trip from Tripway ! </string>
    <string name="share">Share This Trip! : </string>


</resources>
